@@ -309,7 +309,7 @@ author an e-mail.
 
 5. BUG REPORTS
 
-Please send bug reports and/or comments to Nigel Horne <njh@despammed.com> or
+Please send bug reports and/or comments to Nigel Horne <njh@clamav.net> or
 bugs@clamav.net.
 
 Various tips will go here, for example
